Show GasProfiler statistics for MGas/s
Signed-off-by: Luis Pinto <luis.pinto@consensys.net>